# backend

./: .env.example  .gitignore  N8N_ENDPOINT_DOCS.md  README.md  implement.md  pyproject.toml
app/: database.py  geocoding_service.py  main.py  models.py  schemas.py  security.py  settings.py
app/routers/auth/: auth_controller.py
app/routers/catadores/: catadores_controller.py
app/routers/empresas/: empresas_controller.py
app/routers/pontos_coleta/: pontos_coleta_controller.py
app/routers/solicitacoes/: solicitacoes_controller.py
migrations/: env.py
migrations/versions/: 2778c8bd1837_add_cascade_delete_to_catadores_empresas.py  599e1041160e_add_empresa_ponto_catador_to_ordens_.py  59ce49cf6d48_initial_migration_with_users_reports_.py  5abaae149657_create_solicitacoes_coleta_and_ordens_.py  a1b2c3d4e5f6_add_latitude_longitude_to_tables.py  b0ca20908a9d_add_cascade_delete_to_ordem_servico.py  b2c3d4e5f6a7_add_endereco_to_empresas.py  c3d4e5f6a7b8_add_tipo_material_to_solicitacoes.py  d1fe4896552c_create_empresas_and_pontos_coleta.py  dfdae5b48dea_add_catadores.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py  test_user.py
