[tool.poetry]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = ["Paulo Jalowyj <paulo.jalowyj@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = { extras = ["standard"], version = "^0.115.0" }
httptools = "^0.6.4"
pydantic = { extras = ["email"], version = "^2.8.2" }
sqlalchemy = "^2.0.34"
pydantic-settings = "^2.4.0"
alembic = "^1.13.2"
pyjwt = "^2.9.0"
pwdlib = { extras = ["argon2"], version = "^0.2.1" }
python-multipart = "^0.0.9"
psycopg = {extras = ["binary"], version = "^3.2.1"}

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.3"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"
factory-boy = "^3.3.1"
freezegun = "^1.5.1"
testcontainers = "^4.8.1"

[tool.taskipy.tasks]
dev = 'fastapi dev app/main.py'
run = 'fastapi run app/main.py'
pre_test = 'task lint'
test = 'pytest --cov=app -vv -x -s'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
